--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".login.MainActivity"
+            android:name=".details.DetailsActivity"
             android:exported="false" />
         <activity
             android:name=".home.HomeActivity"
