--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".details.ui.DetailsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Popcorn.TranslucentStatus" />
         <activity
             android:name=".home.HomeActivity"
             android:exported="true">
