--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,6 @@
 [versions]
+agp = "8.6.0"
+kotlin = "2.0.0"
 appcompat = "1.6.1"
 constraintlayout = "2.1.4"
 coreKtx = "1.10.1"
@@ -32,3 +34,5 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 skeletonlayout = { module = "com.faltenreich:skeletonlayout", version.ref = "skeletonlayout" }
 
 [plugins]
+androidApplication = { id = "com.android.application", version.ref = "agp" }
+jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
